# bign-handheld-thumbnailer

./: .gitignore  Cargo.toml  README.md  bign-handheld-thumbnailer-3ds.xml  bign-handheld-thumbnailer.metainfo.xml  bign-handheld-thumbnailer.thumbnailer  meson.build  meson_options.txt
data/: bign-handheld-thumbnailer.metainfo.xml.in  bign-handheld-thumbnailer.thumbnailer.in
data/mime/: bign-handheld-thumbnailer-3ds.xml  bign-handheld-thumbnailer.xml
src/: args.rs  error.rs  generic_errors.rs  main.rs  main_errors.rs  n3ds.rs  nds.rs  utils.rs
src/n3ds/: errors.rs  mod.rs  n3ds_parsing_errors.rs  n3ds_structures.rs  structures.rs
src/n3ds/structures/: cci.rs  cia.rs  cxi.rs
src/n3ds/structures/cxi/: ncch_flags.rs
src/nds/: errors.rs  mod.rs  nds_banner_structure.rs  nds_parsing_errors.rs  structures.rs
src/utils/: bgr555.rs  mod.rs  rgb555.rs  rgb565.rs  rgb888.rs
