[package]
name = "bign-handheld-thumbnailer"
version = "1.1.2"
authors = ["Mateus Rodrigues Costa <mateusrodcosta@gmail.com>"]
edition = "2021"
description = "Thumbnailer for Nintendo handheld game consoles (DS and 3DS) roms and homebrew"
readme = "README.md"
repository = "https://github.com/MateusRodCosta/bign-handheld-thumbnailer"
license = "GPL-2.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# This thumbnailer will be packaged as a RPM for Fedora,
# therefore the dependencies will be synced with Fedora repos once in a while

[dependencies]
pico-args = "0.5.0"
gio = "0.20.11"
thiserror = "2.0.12"

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["png"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
